--- a/index.html
+++ b/index.html
@@ -186,38 +186,18 @@
 		</div>
 	</section>
 
-	<section class="mt-md-7 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
-		<div class="container">
-			<div class="row position-relative">
-				<div class="d-none d-md-block col-12 col-md-4 z-index-2 banner__image-wrapper" data-aos="fade-up">
-					<img src="./dist/img/hand-with-keys-1900w.webp" alt="hand with keys" class="banner__image">
-				</div>
-				<header class="col-12 col-md-8 ms-auto py-4 z-index-2">
-					<h2 class="text-white">
-						Już dzisiaj znajdź dla siebie wymażone auto!
-					</h2>
-					<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-						<a href="#" class="btn btn-white">
-							Zobacz naszą ofertę
-						</a>
-					</div>
-				</header>
-			</div>
-		</div>
-	</section>
-
-	<section class="bg-blue-primary text-white py-4 pb-8">
+		<section class="text-white py-4 pb-5 border-top">
 		<div class="container">
 			<div class="row justify-content-center">
 				<header class="col-md-8 order-1">
-					<h2 class="text-white">
+					<h2 class="">
 						Zobacz polecane modele
 					</h2>
 				</header>
 				<div class="col order-2 order-md-3">
 					<ul class="list-unstyled mb-md-0 mt-2 row px-0 align-items-stretch">
 						<li class="col-md-4 mt-1">
-							<article class="bg-white h-100">
+							<article class="bg-white shadow h-100">
 								<a href="#">
 									<figure class="d-block mb-0 archive__image-wrapper">
 										<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
@@ -243,7 +223,7 @@
 							</article>
 						</li>
 						<li class="col-md-4 mt-1">
-							<article class="bg-white h-100">
+							<article class="bg-white shadow h-100">
 								<a href="#">
 									<figure class="d-block mb-0 archive__image-wrapper">
 										<img src="./dist/img/4-1900w.webp" alt="image" class="archive__image">
@@ -269,7 +249,7 @@
 							</article>
 						</li>
 						<li class="col-md-4 mt-1">
-							<article class="bg-white h-100">
+							<article class="bg-white shadow h-100">
 								<a href="#">
 									<figure class="d-block mb-0 archive__image-wrapper">
 										<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
@@ -301,6 +281,26 @@
 						Zobacz całą ofertę
 					</a>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="mt-md-7 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
+		<div class="container">
+			<div class="row position-relative">
+				<div class="d-none d-md-block col-12 col-md-4 z-index-2 banner__image-wrapper" data-aos="fade-up">
+					<img src="./dist/img/hand-with-keys-1900w.webp" alt="hand with keys" class="banner__image">
+				</div>
+				<header class="col-12 col-md-8 ms-auto py-4 z-index-2">
+					<h2 class="text-white">
+						Już dzisiaj znajdź dla siebie wymażone auto!
+					</h2>
+					<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+						<a href="#" class="btn btn-white">
+							Zobacz naszą ofertę
+						</a>
+					</div>
+				</header>
 			</div>
 		</div>
 	</section>
