--- a/single.html
+++ b/single.html
@@ -133,7 +133,7 @@
 							</tr>
 						</table>
 						<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-							<span class="btn btn-sm btn-white">
+							<span class="btn btn-sm btn-white pe-none">
 								Faktura VAT
 							</span>
 							<a href="tel:512356012" class="btn btn-sm btn-white">
@@ -146,7 +146,7 @@
 				<div class="col-12 col-md-7 single__column">
 					<div class="shadow single__content">
 						<h1 class="h3">
-							MERCEDES S500 V8 bi-turbo
+							MERCEDES S500 V8 bi-turbo 456KM 4Matic 4x4 z 2014 rocznika pakiet stylistyczny AMG
 						</h1>
 						<div class="row">
 							<div class="col-12 col-md-6">
@@ -196,9 +196,6 @@
 						</div>
 					</div>
 					<div class="shadow single__content">
-						<h2 class="h3">
-							MERCEDES S500 V8 bi-turbo 456KM 4Matic 4x4 z 2014 rocznika pakiet stylistyczny AMG
-						</h2>
 						<p>
 							Samochód zakupiłem w salonie Mercedesa w Niemczech osobiście (posiadam dokumentację fotograficzną z odbioru, kopię oferty salonu). Samochód jest bez zbędnego rozpisywania się w stanie technicznym i wizualnym idealnym!
 						</p>
