added pagination to archive.html

--- a/archive.html
+++ b/archive.html
@@ -160,6 +160,20 @@
 		</div>
 	</section>
 
+	<nav class="mb-4 mb-md-0">
+		<div class="container">
+			<div class="row">
+				<ul class="col-12 list-unstyled d-flex gap-1 justify-content-center">
+					<li><a href="#" class="text-blue-primary">1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li><a href="#">5</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
 	<section class="mt-md-7 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
 		<div class="container">
 			<div class="row position-relative">
