--- a/page.html
+++ b/page.html
@@ -71,7 +71,7 @@
 	<section class="py-4">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 col-md-8 mx-auto">
+				<div class="col-12 col-md-8 mx-auto custom-content">
 					<p>
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum pariatur, doloribus perspiciatis similique aspernatur commodi, dolorem amet dolorum, vel, esse molestias minus exercitationem sit placeat ea dolores asperiores repellat corrupti!
 					</p>
@@ -81,6 +81,11 @@
 					<p>
 						Pellentesque lorem libero, ultricies nec orci sed, ultrices laoreet orci. Phasellus enim odio, euismod eu cursus sit amet, porta sed metus. Maecenas sit amet tempus elit, vitae pulvinar nisl. Nunc accumsan elementum suscipit. Vivamus urna libero, rhoncus in neque congue, feugiat pretium mi. Vivamus sit amet massa elit. Mauris ultricies dictum ligula at tincidunt. Ut euismod metus mauris, elementum scelerisque turpis gravida at. Aenean tincidunt feugiat justo ac egestas.
 					</p>
+					<blockquote>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing, elit. Consequatur accusantium optio aut omnis excepturi aspernatur fuga sequi quae vel, illo, ipsum sapiente, alias voluptate cupiditate reiciendis doloremque sint veritatis fugit.
+						</p>
+					</blockquote>
 					<p>
 						Ut commodo laoreet dolor, eget vehicula ex euismod eu. Etiam a orci vel nibh pharetra sollicitudin vel a nulla. Quisque id blandit quam. Donec quis maximus augue. Quisque ut elit commodo, consectetur orci ut, rhoncus odio.
 					</p>
