--- a/archive.html
+++ b/archive.html
@@ -68,94 +68,97 @@
 	<section class="py-4">
 		<div class="container">
 			<ul class="row justify-content-center list-unstyled archive">
-				<li class="col-12">
-					<div class="shadow row flex-row g-0 bg-white">
-						<a href="#" class="col-12 col-md-5">
-							<figure class="d-block mb-0 archive__image-wrapper">
-								<img src="./dist/img/4-1900w.webp" alt="image" class="archive__image">
-							</figure>
+				
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="bg-white shadow">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/4-1900w.webp" class="archive__image">
 						</a>
-						<article class="col-12 col-md-7 p-2">
-							<header>
-								<a href="#">
-									<h3>
-										Mercedes-Benz S500 4Matic V8bi-turbo 456KM AMG bezwypadkowy serwis ASO
-									</h3>
-								</a>
-							</header>
-							<table class="table table-borderless">
-								<tr>
-									<td>Rok produkcji</td>
-									<td>2013</td>
-								</tr>
-								<tr>
-									<td>Moc silnika</td>
-									<td>430 KM</td>
-								</tr>
-								<tr>
-									<td>Pojemność</td>
-									<td>4.3 L</td>
-								</tr>
-								<tr>
-									<td>Przebieg</td>
-									<td>39 000 km</td>
-								</tr>
-							</table>
-							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-								<span class="btn btn-blue-secondary text-white pe-none">
-									229 000 zł
-								</span>
-								<a href="#" class="btn btn-outline-blue-primary">
-									Szczegóły
-								</a>
-							</footer>
-						</article>
-					</div>
+						<header class="p-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes-benz s500
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
 				</li>
-				<li class="col-12">
-					<div class="shadow row flex-row g-0 bg-white">
-						<a href="#" class="col-12 col-md-5">
-							<figure class="d-block mb-0 archive__image-wrapper">
-								<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
-							</figure>
+
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="bg-white shadow">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/4-1900w.webp" class="archive__image">
 						</a>
-						<article class="col-12 col-md-7 p-2">
-							<header>
-								<a href="#">
-									<h3>
-										Ferrari CALIFORNIA 2+2 4.3 V8 490KM BEZWYPADKOWA NIEMALOWANA SERWIS ASO
-									</h3>
-								</a>
-							</header>
-							<table class="table table-borderless">
-								<tr>
-									<td>Rok produkcji</td>
-									<td>2013</td>
-								</tr>
-								<tr>
-									<td>Moc silnika</td>
-									<td>430 KM</td>
-								</tr>
-								<tr>
-									<td>Pojemność</td>
-									<td>4.3 L</td>
-								</tr>
-								<tr>
-									<td>Przebieg</td>
-									<td>39 000 km</td>
-								</tr>
-							</table>
-							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-								<span class="btn btn-blue-secondary text-white pe-none">
-									599 000 zł
-								</span>
-								<a href="#" class="btn btn-outline-blue-primary">
-									Szczegóły
-								</a>
-							</footer>
-						</article>
-					</div>
+						<header class="p-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes-benz s500
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
 				</li>
+
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="bg-white shadow">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/4-1900w.webp" class="archive__image">
+						</a>
+						<header class="p-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes-benz s500
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+
 			</ul>
 		</div>
 	</section>
