--- a/archive.html
+++ b/archive.html
@@ -67,6 +67,187 @@
 
 	<section class="py-4">
 		<div class="container">
+			<ul class="row list-unstyled archive">
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1 position-relative">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 Lorem
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+				<li class="col-12 col-md-6 col-lg-4">
+					<article class="h-100 shadow bg-white d-flex flex-column gap-1">
+						<a href="#" class="archive__image-wrapper">
+							<img src="./dist/img/1-1900w.webp" alt="" class="archive__image">
+						</a>
+						<header class="px-1">
+							<a href="#">
+								<h3 class="mb-0">
+									Mercedes S500 
+								</h3>
+							</a>
+						</header>
+						<ul class="px-1 pb-1 archive__list">
+							<li class="archive__list-item">2013</li>
+							<li class="archive__list-item">430 KM</li>
+							<li class="archive__list-item">156 000 km</li>
+							<li class="archive__list-item">benzyna</li>
+						</ul>
+						<footer class="px-1 pb-1 archive__footer">
+							<div class="d-flex flex-column">
+								<span class="archive__price">229 000 zł</span>
+								<span class="archive__price-type">brutto</span>
+							</div>
+							<a href="#" class="btn btn-blue-secondary text-white">
+								Szczegóły
+							</a>
+						</footer>
+					</article>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- <section class="py-4">
+		<div class="container">
 			<ul class="row justify-content-center list-unstyled archive">
 				
 				<li class="col-12 col-md-6 col-lg-4">
@@ -161,18 +342,21 @@
 
 			</ul>
 		</div>
-	</section>
+	</section> -->
 
-	<nav class="mb-4 mb-md-0">
+	<nav class="pb-4">
 		<div class="container">
 			<div class="row">
-				<ul class="col-12 list-unstyled d-flex gap-1 justify-content-center">
-					<li><a href="#" class="text-blue-primary">1</a></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-					<li><a href="#">5</a></li>
-				</ul>
+				<div class="col-12 text-center">
+					<ul class="list-unstyled d-flex gap-05 justify-content-center pagination">
+						<li class="pagination__item">
+							<span aria-current="page" class="page-numbers current">1</span>
+						</li>
+						<li class="pagination__item">
+							<a class="page-numbers" href="#">2</a>
+						</li>
+					</ul>				
+				</div>
 			</div>
 		</div>
 	</nav>
