--- a/index.html
+++ b/index.html
@@ -186,100 +186,165 @@
 		</div>
 	</section>
 
-		<section class="text-white py-4 pb-5 border-top">
+	<section class="py-4 pb-2 border-top">
 		<div class="container">
 			<div class="row justify-content-center">
-				<header class="col-md-8 order-1">
-					<h2 class="">
-						Zobacz polecane modele
+				<header class="col-md-12">
+					<h2 class="text-blue-primary">
+						Zobacz polecane modele          
 					</h2>
 				</header>
-				<div class="col order-2 order-md-3">
-					<ul class="list-unstyled mb-md-0 mt-2 row px-0 align-items-stretch">
-						<li class="col-md-4 mt-1">
-							<article class="bg-white shadow h-100">
-								<a href="#">
-									<figure class="d-block mb-0 archive__image-wrapper">
-										<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
-									</figure>
+				<div class="col-12">
+					<ul class="row justify-content-center list-unstyled mb-md-0 mt-2 archive">
+						<li class="col-12 col-md-6 col-lg-4">
+							<article class="d-flex flex-column justify-content-between bg-white shadow h-100 position-relative">
+								<span class="archive__fv z-index-2">
+									Faktura VAT
+								</span>
+								<a href="#" class="archive__image-wrapper">
+									<img width="576" height="433" src="./dist/img/4-768w.webp" class="archive__image" alt="" loading="lazy">
 								</a>
-								<div class="p-2">
-									<header>
-										<a href="#">
-											<h3 class="text-center text-md-start">
-												Ferrari CALIFORNIA 2+2 4.3 V8 490KM BEZWYPADKOWA NIEMALOWANA SERWIS ASO
-											</h3>
-										</a>
-									</header>
-									<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-										<span class="btn btn-blue-secondary text-white pe-none">
-											599 000 zł
-										</span>
-										<a href="#" class="btn btn-outline-blue-primary">
-											Szczegóły
-										</a>
-									</footer>
-								</div>
+								<header class="p-1">
+									<a href="#">
+										<h3 class="mb-0">
+											Mercedes s500 amg aso                    
+										</h3>
+									</a>
+								</header>
+								<ul class="px-1 pb-1 archive__list">
+									<li class="archive__list-item">
+										2009                  
+									</li>
+									<li class="archive__list-item">
+										235 KM                  
+									</li>
+									<li class="archive__list-item">
+										139 000 km                  
+									</li>
+									<li class="archive__list-item">
+										3.0                  
+									</li>
+									<li class="archive__list-item">
+										5                  
+									</li>
+									<li class="archive__list-item">
+										SZARY METALIK                  
+									</li>
+									<li class="archive__list-item">
+										limuzyna                  
+									</li>
+								</ul>
+								<footer class="px-1 pb-1 archive__footer">
+									<div class="d-flex flex-column">
+										<span class="archive__price">229000 zł</span>
+										<span class="archive__price-type">brutto</span>
+									</div>
+									<a href="#" class="btn btn-blue-secondary text-white">
+									Szczegóły
+									</a>
+								</footer>
 							</article>
 						</li>
-						<li class="col-md-4 mt-1">
-							<article class="bg-white shadow h-100">
-								<a href="#">
-									<figure class="d-block mb-0 archive__image-wrapper">
-										<img src="./dist/img/4-1900w.webp" alt="image" class="archive__image">
-									</figure>
+						<li class="col-12 col-md-6 col-lg-4">
+							<article class="d-flex flex-column justify-content-between bg-white shadow h-100 position-relative">
+								<a href="#" class="archive__image-wrapper">
+									<img width="576" height="433" src="./dist/img/citroen-768w.webp" class="archive__image" alt="" loading="lazy">
 								</a>
-								<div class="p-2">
-									<header>
-										<a href="#">
-											<h3 class="text-center text-md-start">
-												Mercedes-Benz S500 4Matic V8bi-turbo 456KM AMG serwis ASO
-											</h3>
-										</a>
-									</header>
-									<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-										<span class="btn btn-blue-secondary text-white pe-none">
-											599 000 zł
-										</span>
-										<a href="#" class="btn btn-outline-blue-primary">
-											Szczegóły
-										</a>
-									</footer>
-								</div>
+								<header class="p-1">
+									<a href="#">
+										<h3 class="mb-0">
+											Citroen C4 Picasso         
+										</h3>
+									</a>
+								</header>
+								<ul class="px-1 pb-1 archive__list">
+									<li class="archive__list-item">
+										2009                  
+									</li>
+									<li class="archive__list-item">
+										235 KM                  
+									</li>
+									<li class="archive__list-item">
+										139 000 km                  
+									</li>
+									<li class="archive__list-item">
+										3.0                  
+									</li>
+									<li class="archive__list-item">
+										5                  
+									</li>
+									<li class="archive__list-item">
+										SZARY METALIK                  
+									</li>
+									<li class="archive__list-item">
+										limuzyna                  
+									</li>
+								</ul>
+								<footer class="px-1 pb-1 archive__footer">
+									<div class="d-flex flex-column">
+										<span class="archive__price">56400 zł</span>
+										<span class="archive__price-type">brutto</span>
+									</div>
+									<a href="#" class="btn btn-blue-secondary text-white">
+									Szczegóły
+									</a>
+								</footer>
 							</article>
 						</li>
-						<li class="col-md-4 mt-1">
-							<article class="bg-white shadow h-100">
-								<a href="#">
-									<figure class="d-block mb-0 archive__image-wrapper">
-										<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
-									</figure>
+						<li class="col-12 col-md-6 col-lg-4">
+							<article class="d-flex flex-column justify-content-between bg-white shadow h-100 position-relative">
+								<span class="archive__fv z-index-2">
+									Faktura VAT
+								</span>
+								<a href="#" class="archive__image-wrapper">
+									<img width="576" height="433" src="./dist/img/ferrari-768w.webp" class="archive__image" alt="" loading="lazy">
 								</a>
-								<div class="p-2">
-									<header>
-										<a href="#">
-											<h3 class="text-center text-md-start">
-												Ferrari CALIFORNIA 2+2 4.3 V8 490KM BEZWYPADKOWA NIEMALOWANA SERWIS ASO
-											</h3>
-										</a>
-									</header>
-									<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-										<span class="btn btn-blue-secondary text-white pe-none">
-											599 000 zł
-										</span>
-										<a href="#" class="btn btn-outline-blue-primary">
-											Szczegóły
-										</a>
-									</footer>
-								</div>
+								<header class="p-1">
+									<a href="#">
+										<h3 class="mb-0">
+											Ferrari F420 edition
+										</h3>
+									</a>
+								</header>
+								<ul class="px-1 pb-1 archive__list">
+									<li class="archive__list-item">
+										2009                  
+									</li>
+									<li class="archive__list-item">
+										235 KM                  
+									</li>
+									<li class="archive__list-item">
+										139 000 km                  
+									</li>
+									<li class="archive__list-item">
+										3.0                  
+									</li>
+									<li class="archive__list-item">
+										5                  
+									</li>
+									<li class="archive__list-item">
+										SZARY METALIK                  
+									</li>
+									<li class="archive__list-item">
+										limuzyna                  
+									</li>
+								</ul>
+								<footer class="px-1 pb-1 archive__footer">
+									<div class="d-flex flex-column">
+										<span class="archive__price">419000 zł</span>
+										<span class="archive__price-type">brutto</span>
+									</div>
+									<a href="#" class="btn btn-blue-secondary text-white">
+									Szczegóły
+									</a>
+								</footer>
 							</article>
 						</li>
 					</ul>
 				</div>
-				<div class="col-md-4 order-3 order-md-2 bg-primary text-center text-md-end">
-					<a href="#" class="btn btn-blue-secondary text-white mt-2 mt-md-0">
-						Zobacz całą ofertę
-					</a>
+				<div class="col-md-12 bg-primary text-center pt-md-2">
+					<a href="#" class="btn btn-blue-secondary btn-lg text-white mt-2 mt-md-0">
+					Zobacz całą ofertę          </a>
 				</div>
 			</div>
 		</div>
